[metadata]
name = throttled
summary = Workaround for Intel throttling issues in Linux.
description-file =
    README.md
author = Francesco Palmarini
author-email = 
home-page = https://github.com/erpalma/throttled
python-requires = >=3.6
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
data_files =
    /etc =
        etc/throttled.conf
packages =
    throttled

[entry_points]
console_scripts =
	throttled = throttled.throttled:main
